--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="summary" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+    <script src="./bundle/"></script>
 </body>
 
 </html>
