--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="summary" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./as">
 </head>
 
 <body>
