--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="summary" />
-    <link rel="stylesheet" href="./as">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <script src="./bundle/"></script>
+    <script src="./assets/js/main.min.js"></script>
 </body>
 
 </html>
